--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Be My Valentine</title>
-    <link rel="stylesheet" href="css/valentine.css" />
+    <title>Be My girlfriend?</title>
+    <link rel="stylesheet" href="valentine.css" />
   </head>
   <body>
     <div id="valentineQuestion"><b>Will you be my girlfriend?</b></div>
