--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Be My girlfriend?</title>
-    <link rel="stylesheet" href="valentine.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <div id="valentineQuestion"><b>Will you be my girlfriend?</b></div>
