Adding name in title

--- a/heart.html
+++ b/heart.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">   
     <title>Valentine's Day Card</title>
-    <link href="/css/rizz.css" rel="stylesheet">
+    <link href="css/rizz.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Great+Vibes">
 </head>
 <body>
     <h1 class="main-title">YOU MADE THE RIGHT CHOICE!!! Open the envolope</h1>
     <div class="image-container">
-        <img id="celebrationGif" src="/pictures/rizz.gif" alt="Celebration" style="display: none; width: 50%; max-width: 300px; margin: 0 auto;">
+        <img id="celebrationGif" src="pictures/rizz.gif" alt="Celebration" style="display: none; width: 50%; max-width: 300px; margin: 0 auto;">
     </div>
     
     <audio id="celebrationAudio" style="display: none;">
