--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Be My gf</title>
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <style>
       img {
         pointer-events: none;
@@ -31,7 +31,7 @@
     <button class="answerButton" id="no" title="HaHa! LIKE YOU EVEN HAVE A CHOICE!">I no no wanna o(╥﹏╥)o</button>
     <br />
     <div class="image-container">
-      <img src="/pictures/cat.gif" alt="cat asking question" class="responsive" />
+      <img src="pictures/cat.gif" alt="cat asking question" class="responsive" />
     </div>
   
 
