Fixed the button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <button class="answerButton" id="yes" onclick="location.href='heart.html'">
       Yes
     </button>
-    <button class="answerButton" id="no" title="HaHa! LIKE YOU EVEN HAVE A CHOICE!">I no no wanna o(╥﹏╥)o</button>
+    <button class="answerButton" id="no" title="HaHa! LIKE YOU EVEN HAVE A CHOICE!">No I don't think I wanna 😕 </button>
     <br />
     <div class="image-container">
       <img src="pictures/cat.gif" alt="cat asking question" class="responsive" />
